# robocon2024

./: .gitignore  README.md  pyproject.toml  robot_arguments.txt  test.robot
resources/locators/: checkout_page.yaml  header_area.yaml  login_page.yaml  order_overview_page.yaml  products_page.yaml  shopping_cart_page.yaml
resources/pages/: checkout_page.resource  header_area.resource  login_page.resource  main_page.resource  order_overview_page.resource  products_page.resource  shopping_cart_page.resource
resources/utils/: browser_management.resource
results/: log.html  playwright-log.txt  report.html
tests/: file_handling.robot  frames_and_shadows.robot  test.robot
